chore: add ATT&CK STIX Analysis Workflow notebook and update metadata

--- a/ATT&CK STIX Analysis Workflow (Conceptual).ipynb
+++ b/ATT&CK STIX Analysis Workflow (Conceptual).ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aceaa65f-4729-40d6-a95c-f88650e7f80f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "0eb47e32-8fdd-495f-8130-82dd2051fb9c",
@@ -204,7 +196,11 @@
   {
    "cell_type": "markdown",
    "id": "412e20d6-47af-4c8c-8c88-31440fbcae6d",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## 4) Minimal Questions That Prove ATT&CK Understanding\n",
     "\n",
@@ -224,7 +220,11 @@
   {
    "cell_type": "markdown",
    "id": "a104e080-5ed2-4c30-8667-421cec2ca91f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## 5) ATT&CK Schema Report\n",
     "- Nodes types summary (counts)\n",
@@ -237,7 +237,11 @@
   {
    "cell_type": "markdown",
    "id": "0e570113-2187-4189-8fb2-bc365fb7fc53",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## 6) Concrete “start with ATT&CK” checklist (no fluff)\n",
     "- Get the STIX bundle JSON (Enterprise ATT&CK).\n",
